Fixed footer & header z-index for faq page overlapping

--- a/app/assets/stylesheets/partials/header.scss
+++ b/app/assets/stylesheets/partials/header.scss
@@ -6,7 +6,7 @@ header {
 	font-weight: bold;
 	padding: 0;
 	display: table;
-	z-index: 1;
+	z-index: 99999999;
 	div nav {
 		#logo {
 		padding-top: 0.25rem;
